tests/snapshots/youtube__music_album_single_intl.snap
---
source: tests/youtube.rs
expression: album
---
MusicAlbum(
  id: "MPREb_bHfHGoy7vuv",
  playlist_id: Some("OLAK5uy_kdSWBZ-9AZDkYkuy0QCc3p0KO9DEHVNH0"),
  name: "Der Himmel reißt auf",
  cover: "[cover]",
  artists: [
    ArtistId(
      id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
      name: "[name]",
    ),
    ArtistId(
      id: Some("UCFTcSVPYRWlDoHisR-ZKwgw"),
      name: "[name]",
    ),
  ],
  artist_id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
  description: None,
  album_type: Single,
  year: Some(2020),
  by_va: false,
  tracks: [
    TrackItem(
      id: "VU6lEv0PKAo",
      name: "[name]",
      duration: Some(183),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
          name: "[name]",
        ),
        ArtistId(
          id: Some("UCFTcSVPYRWlDoHisR-ZKwgw"),
          name: "[name]",
        ),
      ],
      artist_id: Some("UCXGYZ-OhdOpPBamHX3K9YRg"),
      album: Some(AlbumId(
        id: "MPREb_bHfHGoy7vuv",
        name: "Der Himmel reißt auf",
      )),
      view_count: None,
      is_video: false,
      track_nr: Some(1),
      by_va: false,
    ),
  ],
  variants: [],
)
