tests/snapshots/youtube__music_album_various_artists.snap
---
source: tests/youtube.rs
expression: album
---
MusicAlbum(
  id: "MPREb_8QkDeEIawvX",
  playlist_id: Some("OLAK5uy_mEX9ljZeeEWgTM1xLL1isyiGaWXoPyoOk"),
  name: "＜Queendom2＞ FINAL",
  cover: "[cover]",
  artists: [],
  artist_id: None,
  description: None,
  album_type: single,
  year: Some(2022),
  by_va: true,
  tracks: [
    TrackItem(
      id: "Tzai7JXo45w",
      name: "Waka Boom (My Way) (feat. Lee Young Ji)",
      duration: Some(274),
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "HYOLYN",
        ),
      ],
      artist_id: None,
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(1),
      by_va: false,
    ),
    TrackItem(
      id: "9WYpLYAEub0",
      name: "AURA",
      duration: Some(216),
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "WJSN",
        ),
      ],
      artist_id: None,
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(2),
      by_va: false,
    ),
    TrackItem(
      id: "R48tE237bW4",
      name: "THE GIRLS (Can’t turn me down)",
      duration: Some(239),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCAKvDuIX3m1AUdPpDSqV_3w"),
          name: "Kep1er",
        ),
      ],
      artist_id: Some("UCAKvDuIX3m1AUdPpDSqV_3w"),
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(3),
      by_va: false,
    ),
    TrackItem(
      id: "-UzsoR6z-vg",
      name: "Red Sun!",
      duration: Some(254),
      cover: [],
      artists: [
        ArtistId(
          id: None,
          name: "VIVIZ",
        ),
      ],
      artist_id: None,
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(4),
      by_va: false,
    ),
    TrackItem(
      id: "kbNVyn8Ex28",
      name: "POSE",
      duration: Some(187),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UCa4ZqZPRjz9MYYnfpoh2few"),
          name: "LOONA",
        ),
      ],
      artist_id: Some("UCa4ZqZPRjz9MYYnfpoh2few"),
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(5),
      by_va: false,
    ),
    TrackItem(
      id: "NJrQZUzWP5Y",
      name: "Whistle",
      duration: Some(224),
      cover: [],
      artists: [
        ArtistId(
          id: Some("UChm_d4qO8txdwS4YadlvpSw"),
          name: "Brave Girls",
        ),
      ],
      artist_id: Some("UChm_d4qO8txdwS4YadlvpSw"),
      album: Some(AlbumId(
        id: "MPREb_8QkDeEIawvX",
        name: "＜Queendom2＞ FINAL",
      )),
      view_count: "[view_count]",
      track_type: track,
      track_nr: Some(6),
      by_va: false,
    ),
  ],
  variants: [],
)
